--- a/order.css
+++ b/order.css
@@ -79,8 +79,6 @@ th {
 td {
   padding-left: 25px;
 }
-tr {
-}
 tr:nth-child(odd) {
   background-color: rgb(222, 245, 222);
 }
@@ -91,9 +89,12 @@ button {
   font-weight: bold;
   border-radius: 5px;
   border: none;
-  padding: 7px 11px;
+  padding: 17px 11px;
   margin: 8px 5px;
   border-radius: 5px;
+  width: 100%;
+  margin-left: 0;
+  font-size: 1.2em;
 }
 button:hover {
   opacity: 0.9;
@@ -103,6 +104,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-self: flex-start;
+  width: 100%;
 }
 input {
   border: 1px solid rgba(50, 50, 50, 0.5);
@@ -110,7 +112,6 @@ input {
   margin-bottom: 15px;
   border-radius: 5px;
 }
-
 input:focus {
   border: 2px solid rgba(10, 250, 10, 0.8);
 }
