feature(posted-car):mark posted car as sold
[FINISHES #165907501]

--- a/postedcars.css
+++ b/postedcars.css
@@ -33,7 +33,7 @@ button {
   height: 240px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background: white;
-  margin-bottom: 15px;
+  margin: 15px;
 }
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -41,5 +41,8 @@ button {
 .cars {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+}
+.dummy {
+  display: none;
 }
