--- a/index.css
+++ b/index.css
@@ -11,16 +11,32 @@ h3 {
   width: 100%;
   text-align: center;
 }
+span {
+  color: rgba(8, 37, 8, 0.9);
+  font-size: 0.8em;
+}
+a {
+  color: #0e8b2b;
+  outline: none;
+  text-decoration: none;
+  font-size: 0.9em;
+}
+a:hover {
+  text-decoration: underline;
+}
 button:hover {
-  opacity: 0.9;
+  opacity: 0.8;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 button {
-  width: 100%;
   background: #1ae84a;
   color: white;
   font-weight: bold;
   border: none;
   padding: 2px;
+}
+.content-container {
+  display: flex;
 }
 .summary {
   font-size: small;
@@ -36,6 +52,7 @@ button {
   background: white;
   margin: 15px;
   padding: 15px;
+  border-radius: 5px;
 }
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -64,4 +81,58 @@ img {
   font-weight: bold;
   color: #083814;
   padding-bottom: 5px;
+}
+.report {
+  align-self: center;
+  font-size: 0.7em;
+  margin-top: 5px;
+}
+
+* {
+  box-sizing: border-box;
+}
+.form-container {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  margin-top: 15px;
+  padding: 5px;
+  align-self: flex-start;
+  border-radius: 5px;
+}
+input,
+button {
+  /* background: #eee; */
+  padding: 7px 11px;
+  border-radius: 5px;
+}
+input {
+  border: 1px solid rgba(50, 50, 50, 0.5);
+  margin: 8px 5px;
+}
+input:focus {
+  border: 2px solid rgba(10, 250, 10, 0.8);
+}
+.price-container {
+  display: flex;
+}
+.price-range {
+  width: 40%;
+  padding-right: 2px;
+}
+.priceline {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+input[type='radio'] {
+  align-self: flex-start;
+}
+.radio-container {
+  display: flex;
+  align-items: center;
+}
+.form-container button {
+  margin: 5px;
 }
